--- a/package.json
+++ b/package.json
@@ -5,11 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.0.3",
+    "autoprefixer": "^10.4.7",
+    "daisyui": "^2.14.3",
+    "mongodb": "^4.5.0",
     "next": "12.1.5",
+    "next-auth": "^4.3.4",
+    "postcss": "^8.4.13",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "prettier": "^2.6.2"
   }
 }
